<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e4ff54"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="#79b700"
            android:text="@string/business_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tulips" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#79b700"
            android:padding="5dp"
            android:text="@string/description_of_Business"
            android:textColor="#012345"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#e4ff54"
            android:padding="5dp"
            android:text="@string/the_description"
            android:textColor="#012345"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="#012345"
            android:background="#ffffff"
            android:padding="5dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="42dp"
                android:src="@drawable/pointer_icon_27"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="#aeea00"
                android:text="@string/address_of_business"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="#012345"
            android:background="#ffffff"
            android:padding="5dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@drawable/pointer_icon_28" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="#aeea00"
                android:text="@string/contact_information"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#012345"
            android:text="@string/phone_number"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#012345"
            android:text="@string/email_address"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#012345"
            android:text="@string/web_site"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#012345"
            android:text="@string/hours_of_operation"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>